--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --fix",
     "test": "NODE_ENV=test mocha --require @babel/register --exit",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "migrate-windows": ".\\scripts\\migration.sh",
+    "create-migration-windows": ".\\scripts\\migration.sh",
     "seed-windows": ".\\scripts\\seed.sh"
   },
   "repository": {
@@ -39,10 +39,12 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
